[gd_scene load_steps=61 format=3 uid="uid://bcx7kbk71lcys"]

[ext_resource type="Script" uid="uid://25fyol2u2yfk" path="res://scripts/player/PlayerControl.gd" id="1_vltva"]
[ext_resource type="Texture2D" uid="uid://fbrpv3s52jxc" path="res://assets/player/Lancer/Lancer/Lancer.png" id="2_5aw2d"]
[ext_resource type="Script" uid="uid://baxcuvv8h10tw" path="res://scripts/player/PlayerStats.gd" id="3_jqc4g"]
[ext_resource type="PackedScene" uid="uid://ds85o31ek5a67" path="res://scenes/ui/playerHealthbar.tscn" id="4_5aw2d"]

[sub_resource type="AtlasTexture" id="AtlasTexture_07xs6"]
atlas = ExtResource("2_5aw2d")
region = Rect2(0, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlmvg"]
atlas = ExtResource("2_5aw2d")
region = Rect2(100, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wh6ij"]
atlas = ExtResource("2_5aw2d")
region = Rect2(200, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0upga"]
atlas = ExtResource("2_5aw2d")
region = Rect2(300, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fl557"]
atlas = ExtResource("2_5aw2d")
region = Rect2(400, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv0pn"]
atlas = ExtResource("2_5aw2d")
region = Rect2(500, 300, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsco7"]
atlas = ExtResource("2_5aw2d")
region = Rect2(0, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hocn8"]
atlas = ExtResource("2_5aw2d")
region = Rect2(100, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o27tu"]
atlas = ExtResource("2_5aw2d")
region = Rect2(200, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1xs03"]
atlas = ExtResource("2_5aw2d")
region = Rect2(300, 700, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3r5m"]
atlas = ExtResource("2_5aw2d")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvoid"]
atlas = ExtResource("2_5aw2d")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsfsl"]
atlas = ExtResource("2_5aw2d")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jjkq"]
atlas = ExtResource("2_5aw2d")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhtot"]
atlas = ExtResource("2_5aw2d")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm07u"]
atlas = ExtResource("2_5aw2d")
region = Rect2(500, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0e5dm"]
atlas = ExtResource("2_5aw2d")
region = Rect2(600, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyurw"]
atlas = ExtResource("2_5aw2d")
region = Rect2(700, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlref"]
atlas = ExtResource("2_5aw2d")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1pmy0"]
atlas = ExtResource("2_5aw2d")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_37tdr"]
atlas = ExtResource("2_5aw2d")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsxwm"]
atlas = ExtResource("2_5aw2d")
region = Rect2(300, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jw3cq"]
atlas = ExtResource("2_5aw2d")
region = Rect2(400, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_p58jl"]
atlas = ExtResource("2_5aw2d")
region = Rect2(500, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6phwr"]
atlas = ExtResource("2_5aw2d")
region = Rect2(600, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6oil"]
atlas = ExtResource("2_5aw2d")
region = Rect2(700, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwfta"]
atlas = ExtResource("2_5aw2d")
region = Rect2(0, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsk6w"]
atlas = ExtResource("2_5aw2d")
region = Rect2(100, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq3bt"]
atlas = ExtResource("2_5aw2d")
region = Rect2(200, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1aiv"]
atlas = ExtResource("2_5aw2d")
region = Rect2(300, 600, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_11m88"]
atlas = ExtResource("2_5aw2d")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ajp3"]
atlas = ExtResource("2_5aw2d")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v02u0"]
atlas = ExtResource("2_5aw2d")
region = Rect2(300, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvijq"]
atlas = ExtResource("2_5aw2d")
region = Rect2(400, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk0mm"]
atlas = ExtResource("2_5aw2d")
region = Rect2(500, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_abblx"]
atlas = ExtResource("2_5aw2d")
region = Rect2(600, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_alpyv"]
atlas = ExtResource("2_5aw2d")
region = Rect2(700, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq7ka"]
atlas = ExtResource("2_5aw2d")
region = Rect2(800, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dpx7g"]
atlas = ExtResource("2_5aw2d")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x3tl"]
atlas = ExtResource("2_5aw2d")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_03lcm"]
atlas = ExtResource("2_5aw2d")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_2b8fu"]
atlas = ExtResource("2_5aw2d")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycijs"]
atlas = ExtResource("2_5aw2d")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n32cd"]
atlas = ExtResource("2_5aw2d")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7csb"]
atlas = ExtResource("2_5aw2d")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_016i1"]
atlas = ExtResource("2_5aw2d")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3o2s8"]
atlas = ExtResource("2_5aw2d")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dydof"]
atlas = ExtResource("2_5aw2d")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hrfg"]
atlas = ExtResource("2_5aw2d")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pjpj"]
atlas = ExtResource("2_5aw2d")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5pfps"]
atlas = ExtResource("2_5aw2d")
region = Rect2(600, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_i78mc"]
atlas = ExtResource("2_5aw2d")
region = Rect2(700, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_5pfps"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_07xs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlmvg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wh6ij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0upga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fl557")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv0pn")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsco7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hocn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o27tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xs03")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3r5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvoid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsfsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jjkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhtot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm07u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0e5dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyurw")
}],
"loop": true,
"name": &"engage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlref")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1pmy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_37tdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsxwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jw3cq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p58jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6phwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6oil")
}],
"loop": true,
"name": &"fire_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwfta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsk6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq3bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1aiv")
}],
"loop": false,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_11m88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ajp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v02u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvijq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk0mm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_abblx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alpyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq7ka")
}],
"loop": true,
"name": &"ice_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dpx7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x3tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_03lcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2b8fu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycijs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n32cd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7csb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_016i1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3o2s8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dydof")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hrfg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pjpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5pfps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i78mc")
}],
"loop": true,
"name": &"walking",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mr4qx"]
radius = 5.0

[sub_resource type="SegmentShape2D" id="SegmentShape2D_vltva"]
b = Vector2(55, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_jqc4g"]
b = Vector2(31, 0)

[node name="Lancer" type="CharacterBody2D"]
script = ExtResource("1_vltva")

[node name="Lancer_AnimSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5pfps")
animation = &"walking"
autoplay = "idle"
speed_scale = 3.0

[node name="Lancer_Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CapsuleShape2D_mr4qx")

[node name="Lancer_TakePosition" type="Area2D" parent="."]

[node name="TakePosition_Area" type="CollisionShape2D" parent="Lancer_TakePosition"]
shape = SubResource("SegmentShape2D_vltva")

[node name="Lancer_DamgeEnemy" type="Area2D" parent="."]

[node name="DamageEnemy_Area" type="CollisionShape2D" parent="Lancer_DamgeEnemy"]
position = Vector2(1, -6)
shape = SubResource("SegmentShape2D_jqc4g")
debug_color = Color(0.807987, 0, 0.0191098, 0.42)

[node name="PlayerStatus" type="Node" parent="."]
script = ExtResource("3_jqc4g")

[node name="Player_pov" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerHealthbar" parent="CanvasLayer" instance=ExtResource("4_5aw2d")]
offset_left = 35.0
offset_top = 34.0
offset_right = 418.0
offset_bottom = 61.0
metadata/_edit_use_anchors_ = true

[connection signal="area_entered" from="Lancer_TakePosition" to="." method="_on_engage_in_battle"]
[connection signal="area_exited" from="Lancer_TakePosition" to="." method="_on_out_of_battle"]
[connection signal="area_entered" from="Lancer_DamgeEnemy" to="." method="_on_attack_entered"]
